Started on a test

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 .flutter-plugins
 .flutter-plugins-dependencies
+build
 
 # https://dart.dev/guides/libraries/private-files
 # Created by `dart pub`
