--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,3 +18,7 @@ dependencies:
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
+  dart_lints:
+    git:
+      url: https://gitlab.com/azuredown/dart-lints.git
+      ref: main
