I'm seeing unexpected end of files on the server which would mean we need locking here

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   pocketbase: ^0.18.0
   sqlite3: ^2.0.0
   sqlite3_flutter_libs: ^0.5.0
+  synchronized: ^3.0.0
 
 dev_dependencies:
   lints: ^3.0.0
